[project]
name = "pymanhuagui"
version = "1.0.2"
description = "Manga Downloader for www.manhuagui.com"
authors = [
    { name = "fournoas", email = "admin@fournoas.com" }
]
dependencies = [
    "requests>=2.32.3",
    "lzstring>=1.0.4",
    "beautifulsoup4>=4.12.3",
    "js2py>=0.74",
    "lxml>=5.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
"Homepage" = "https://github.com/tabris17/pymanhuagui"
"Bug Tracker" = "https://github.com/tabris17/pymanhuagui/issues"

[project.scripts]
"pymanhuagui" = "pymanhuagui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pymanhuagui"]
